# gwi_customization

./: .gitignore  MANIFEST.in  README.md  package-lock.json  package.json  pyproject.toml  setup.py
.ropeproject/: config.py
gwi_customization/: __init__.py  hooks.py  install.py  modules.txt  patches.txt  tasks.py
gwi_customization/config/: desktop.py  docs.py  microfinance.py
gwi_customization/microfinance/api/: interest.py  loan.py  loanee.py  test_interest.py  test_loan.py
gwi_customization/microfinance/doctype/audit_statement/: audit_statement.js  audit_statement.json  audit_statement.py  test_audit_statement.js  test_audit_statement.py
gwi_customization/microfinance/doctype/audit_statement_detail/: audit_statement_detail.json  audit_statement_detail.py
gwi_customization/microfinance/doctype/microfinance_charge_type/: microfinance_charge_type.js  microfinance_charge_type.json  microfinance_charge_type.py  test_microfinance_charge_type.js  test_microfinance_charge_type.py  test_records.json
gwi_customization/microfinance/utils/: __init__.py  fp.py
gwi_customization/patches/v0_1/: set_address_text.py
gwi_customization/patches/v0_3/: set_loan_type.py
gwi_customization/public/: build.json
gwi_customization/public/css/: calculate_principal.css
gwi_customization/public/js/: gwi_customization.bundle.js  index.js  interest_list.html  interest_tool_dialog_actions.html  version.js
gwi_customization/public/scss/: calculate_principal.bundle.scss
gwi_customization/templates/includes/: audit_statement.html  pf_clearance_certificate.html  pf_styles.css
(+70 files in other folders)
